--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "wrangler": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
