--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,6 @@
     "name": "worker-name",
     "compatibility_date": "2025-04-01",
     "assets": {
-      "directory": "/src/app/page.js"
+      "directory": "./dist"
     }
   }
